[gd_scene load_steps=12 format=3 uid="uid://d3sd8gyv7xt8q"]

[ext_resource type="Script" path="res://resources/ux/fitxa_treballador.gd" id="1_8ueg4"]
[ext_resource type="Texture2D" uid="uid://clkoj1mihtni" path="res://resources/treballador/imatges_treballadors/Char 1/Character 1.png" id="2_igcje"]
[ext_resource type="Theme" uid="uid://cbnqop7u7csh" path="res://resources/ux/tema_UX.tres" id="3_p7w05"]
[ext_resource type="Texture2D" uid="uid://dqg86md3i3tvx" path="res://resources/ux/generic_icons/Coin2.png" id="4_wspgs"]
[ext_resource type="Texture2D" uid="uid://c6e12rm6hlmnx" path="res://resources/ux/generic_icons/Pencil.png" id="5_y2v01"]
[ext_resource type="Texture2D" uid="uid://dcyb5dqyqs43y" path="res://resources/ux/generic_icons/Wrench2.png" id="6_gc2f8"]
[ext_resource type="Texture2D" uid="uid://cqti8gas3plhi" path="res://resources/ux/generic_icons/Monitor.png" id="7_l5324"]
[ext_resource type="Texture2D" uid="uid://c0wixt2eavejf" path="res://resources/ux/generic_icons/Team.png" id="8_af14y"]
[ext_resource type="Texture2D" uid="uid://bb6dixs2bcdji" path="res://resources/ux/generic_icons/Cash.png" id="9_jprhm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_iq3pk"]
atlas = ExtResource("2_igcje")
region = Rect2(0, 0, 64, 64)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g8sat"]
bg_color = Color(0.306923, 0.306923, 0.306923, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Fitxa informativa treballadors" type="PanelContainer"]
script = ExtResource("1_8ueg4")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="imatgeTreballador" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = SubResource("AtlasTexture_iq3pk")
expand_mode = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("3_p7w05")
text = "lvl:"

[node name="labelNivell" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_p7w05")
text = "1"

[node name="labelNom" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_p7w05")
text = "Nom treballador"
horizontal_alignment = 1

[node name="sou" type="PanelContainer" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/sou"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/sou/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_wspgs")

[node name="labelSou" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/sou/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_p7w05")
text = "30.000â‚¬"

[node name="GridContainer" type="GridContainer" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
columns = 8

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("5_y2v01")

[node name="labelDisseny" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(55, 0)
layout_mode = 2
theme = ExtResource("3_p7w05")
text = "100"

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("6_gc2f8")

[node name="labelEnginy" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(55, 0)
layout_mode = 2
theme = ExtResource("3_p7w05")
text = "100"

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("7_l5324")

[node name="labelInformatica" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(55, 0)
layout_mode = 2
theme = ExtResource("3_p7w05")
text = "100"

[node name="TextureRect4" type="TextureRect" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("8_af14y")

[node name="labelSocial" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(55, 0)
layout_mode = 2
theme = ExtResource("3_p7w05")
text = "100"

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="buttonContracta" type="TextureButton" parent="MarginContainer/HBoxContainer/CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
texture_normal = ExtResource("9_jprhm")
stretch_mode = 4

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_g8sat")

[node name="Label" type="Label" parent="."]
layout_mode = 2
theme = ExtResource("3_p7w05")
text = "No hi ha treballadors disponibles!"
horizontal_alignment = 1
